--- a/templates/user/customer_register.html
+++ b/templates/user/customer_register.html
@@ -22,7 +22,7 @@
         {% endwith %}
 
         <!-- Form to register a new user -->
-        <form method="POST" action="{{ url_for('user_register') }}">
+        <form method="POST" action="{{ url_for('customer_register') }}">
             <div class="mb-3">
                 <label for="email" class="form-label">Email ID (Username)</label>
                 <input type="email" class="form-control" id="email" name="email" required style="border: none; background-color: #e0f0ff;">
