--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -8,7 +8,7 @@
         style="max-width: 500px; background: linear-gradient(135deg, #004aad, #0099ff);">
         <div class="mb-4 text-end">
             <h2 class="text-white fs-5">
-                <a href="{{ url_for('service_prof_signup') }}" class="text-light">Register as Professional</a>
+                <a href="{{ url_for('professional_signup') }}" class="text-light">Register as Professional</a>
             </h2>
         </div>
 
@@ -44,7 +44,7 @@
             <button type="submit" class="btn btn-light btn-lg w-100">Login</button>
         </form>
         <div class="text-center mt-3">
-            <p class="text-white">Don't have an account? <a href="{{ url_for('user_register') }}"
+            <p class="text-white">Don't have an account? <a href="{{ url_for('customer_register') }}"
                     class="text-light">Create Account</a></p>
         </div>
     </div>
