--- a/templates/user/admin_dashboard.html
+++ b/templates/user/admin_dashboard.html
@@ -31,7 +31,7 @@
             </tbody>
         </table>
 
-        <!-- Add New Service Button (Aligned to the right) -->
+        <!-- Add New Service Button -->
         <div class="text-end mb-5">
             <a href="/user/admin_addservice" class="btn btn-primary btn-lg" style="width: 200px; background-color: #0066cc; border-color: #005bb5;">+ New Service</a>
         </div>
