--- a/templates/user/admin_summary.html
+++ b/templates/user/admin_summary.html
@@ -45,7 +45,7 @@
         ratingsData['1'] || 0
     ];
 
-    // Circle chart for Reviews / Ratings
+    // Circle chart for Ratings
     var ctxRatings = document.getElementById('ratingsChart').getContext('2d');
     var ratingsChart = new Chart(ctxRatings, {
         type: 'doughnut',
