--- a/templates/user/customer_remarks.html
+++ b/templates/user/customer_remarks.html
@@ -28,7 +28,7 @@
                 <span class="diamond inactive">&#9670;</span>
                 <span class="diamond inactive">&#9670;</span>
             </div>
-            <input type="hidden" name="rating" id="rating" value="3"> <!-- Default rating is set to 3 -->
+            <input type="hidden" name="rating" id="rating" value="3"> <!-- Default rating set to 3 -->
             <input type="hidden" name="service_id" id="service_id" value="{{ service.service_id }}">
         </div>
 
