--- a/templates/user/professional_layout.html
+++ b/templates/user/professional_layout.html
@@ -32,10 +32,9 @@
         </div>
     </nav>
 
-    <!-- Main Content -->
+    <!-- Content -->
     <div class="container">
         {% block content %} 
-        <!-- Content will be inserted here in the child template -->
         {% endblock %}
     </div>
 
