--- a/templates/user/admin_layout.html
+++ b/templates/user/admin_layout.html
@@ -32,7 +32,7 @@
         </div>
     </nav>
 
-    <!-- Main Content -->
+    <!-- Content -->
     <div class="container">
         {% block content %}
         {% endblock %}
