--- a/templates/user/professional_dashboard.html
+++ b/templates/user/professional_dashboard.html
@@ -1,7 +1,7 @@
 {% extends "user/professional_layout.html" %}
 
 {% block content %}
-    <!-- Profile Section - Right-Aligned -->
+    <!-- Profile Section -->
     <div class="container">
         <div class="row justify-content-end mb-4">
             <div class="col-auto">
