--- a/templates/user/admin_editservice.html
+++ b/templates/user/admin_editservice.html
@@ -7,7 +7,7 @@
         <h3 class="text-center mb-4" style="color: #004aad;">Edit Service</h3>
 
         <!-- Edit Service Form -->
-        <form method="POST" action="{{ url_for('edit_service', service_id=service.id) }}">
+        <form method="POST" action="{{ url_for('admin_editservice', service_id=service.id) }}">
             
             <div class="mb-3">
                 <label for="service_name" class="form-label">Service Name</label>
